[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavenardl"
version = "1.0.1"
description = "Wavelet-based Nonlinear Autoregressive Distributed Lag (W-NARDL) model for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Dr Merwan Roudane"}
]
keywords = [
    "nardl", "ardl", "wavelet", "cointegration", "asymmetry",
    "nonlinear", "time-series", "econometrics", "bounds-test",
    "error-correction"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "statsmodels>=0.13",
    "matplotlib>=3.5",
    "PyWavelets>=1.1",
    "tabulate>=0.8",
    "rich>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/merwanroudane/wavenardl"
Documentation = "https://github.com/merwanroudane/wavenardl#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["wavenardl*"]
